--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ requests==2.31.0
 
 # Frontend
 streamlit==1.28.2
+streamlit-autorefresh==1.0.1
 plotly==5.18.0
 pandas==2.1.3
+folium==0.15.1
+streamlit-folium==0.15.1
 
 # Utilities
 python-dateutil==2.8.2
+polyline==2.0.0
